# collection-json.hs

./: .envrc  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  .travis.yml  .vale.ini  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog.md  LICENSE  README.md  cabal.config.enc  cabal.project  cloudbuild.yaml  codecov.yml  collection-json.cabal  collection-json.nix  default.nix  fourmolu.yaml  hlint.yaml  lychee.toml  network-arbitrary.nix  renovate.json  shell.nix
.github/workflows/: ci.yml  ghc-matrix.yml  links.yml  pre-commit.yml  release.yml
.vale/styles/config/vocabularies/CollectionJSON/: accept.txt
Text/JSON/: CollectionJSON.hs
Text/JSON/CollectionJSON/: Types.hs
docs/explanation/: ecosystem.md
nix/: network-arbitrary.nix  network-uri-json.nix
src/Data/: CollectionJSON.hs
src/Internal/Network/: URI.hs
src/Internal/Network/URI/: JSON.hs
test/: Main.hs  TestSuite.hs
test/Data/: CollectionJSONSpec.hs
test/Data/CollectionJSON/: Arbitrary.hs  Tests.hs
test/Internal/Distribution/TestSuite/Compat/: QuickCheck.hs
test/Internal/Network/: URISpec.hs
test/Internal/Network/URI/: Arbitrary.hs  ArbitrarySpec.hs  JSONSpec.hs  Tests.hs
