name:                collection-json
version:             1.3.1.3
synopsis:            Collection+JSON—Hypermedia Type Tools

description:
  Types, classes, and functions for using the Collection+JSON—Hypermedia Type
  in Haskell.

homepage:            https://github.com/alunduil/collection-json.hs
bug-reports:         https://github.com/alunduil/collection-json.hs/issues
license:             MIT
license-file:        LICENSE
author:              Alex Brandt
maintainer:          alunduil@alunduil.com
copyright:           (c) 2017 Alex Brandt
category:            Data
build-type:          Simple
cabal-version:       3.0
tested-with:         GHC == 9.4.8 || == 9.6.6 || == 9.8.4 || == 9.10.1

extra-source-files:
    ChangeLog.md
  , COPYRIGHT
  , LICENSE
  , README.md
  , Setup.hs

source-repository head
  type:     git
  location: https://github.com/alunduil/collection-json.hs
  branch:   develop

library
  default-language: Haskell2010

  ghc-options: -Wall -fwarn-tabs -fwarn-monomorphism-restriction
               -fwarn-unused-do-bind

  hs-source-dirs:
      src

  exposed-modules:
      Data.CollectionJSON

  other-modules:

  build-depends:
      aeson >=0.8 && <2.3
    , base >=4.6 && <4.23
    , network-uri      == 2.6.*
    , network-uri-json >=0.1 && <0.5
    , text             >=1.2 && <2.2

  other-extensions:
      OverloadedStrings
    , RecordWildCards

test-suite collection-json-tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs

  ghc-options: -Wall -fwarn-tabs -fwarn-monomorphism-restriction
               -fwarn-unused-do-bind

  hs-source-dirs:
      src
    , test

  other-modules:
      Data.CollectionJSON
    , Data.CollectionJSON.Arbitrary
    , Data.CollectionJSONSpec

  build-tool-depends:
      hspec-discover:hspec-discover >= 2.4 && < 2.12

  build-depends:
      aeson >=0.8 && <2.3
    , base >=4.6 && <4.23
    , bytestring           >=0.10 && <0.13
    , hspec >=2.4 && <2.12
    , network-arbitrary >=0.3 && <1.1
    , network-uri          == 2.6.*
    , network-uri-json >=0.1 && <0.5
    , QuickCheck >=2.9 && <2.19
    , quickcheck-instances == 0.3.*
    , test-invariant       == 0.4.*
    , text                 >=1.2 && <2.2

  other-extensions:
      OverloadedStrings
    , RecordWildCards
