cabal-version:       3.0
name:                collection-json
version:             1.3.1.3
synopsis:            Collection+JSON—Hypermedia Type Tools

description:
  Types, classes, and functions for using the Collection+JSON—Hypermedia Type
  in Haskell.

homepage:            https://github.com/alunduil/collection-json.hs
bug-reports:         https://github.com/alunduil/collection-json.hs/issues
license:             MIT
license-file:        LICENSE
author:              Alex Brandt
maintainer:          alunduil@alunduil.com
copyright:           (c) 2017 Alex Brandt
category:            Data
build-type:          Simple
tested-with:         GHC == 9.6.*
                   , GHC == 9.8.*
                   , GHC == 9.10.*
                   , GHC == 9.12.*

extra-doc-files:
    CHANGELOG.md
  , COPYRIGHT
  , README.md

extra-source-files:
    Setup.hs

source-repository head
  type:     git
  location: https://github.com/alunduil/collection-json.hs
  branch:   develop

common warnings
  ghc-options: -Wall
               -Wcompat
               -Widentities
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wpartial-fields
               -Wredundant-constraints

common language
  default-language: Haskell2010

library
  import:           warnings, language

  hs-source-dirs:   src

  exposed-modules:
      Data.CollectionJSON

  build-depends:
      aeson            >= 2.0  && < 2.3
    , base             >= 4.18 && < 4.22
    , network-uri      >= 2.6  && < 2.7
    , network-uri-json >= 0.4  && < 0.5
    , text             >= 2.0  && < 2.2

  other-extensions:
      OverloadedStrings
    , RecordWildCards

test-suite collection-json-tests
  import:           warnings, language
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs

  hs-source-dirs:   test

  other-modules:
      Data.CollectionJSON.Arbitrary
    , Data.CollectionJSONSpec

  build-tool-depends:
      hspec-discover:hspec-discover >= 2.10 && < 2.12

  build-depends:
      aeson                >= 2.0  && < 2.3
    , base                 >= 4.18 && < 4.22
    , bytestring           >= 0.11 && < 0.13
    , collection-json
    , hspec                >= 2.10 && < 2.12
    , network-arbitrary    >= 1.0  && < 1.1
    , network-uri          >= 2.6  && < 2.7
    , network-uri-json     >= 0.4  && < 0.5
    , QuickCheck           >= 2.14 && < 2.19
    , quickcheck-instances >= 0.3  && < 0.4
    , test-invariant       >= 0.4  && < 0.5
    , text                 >= 2.0  && < 2.2

  other-extensions:
      OverloadedStrings
    , RecordWildCards
